objects/Demo__c.object
<CustomObject>
    <description>This object keeps all the information related to Demos.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Demos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_to__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Resource to whom the demo is assigned for its execution.</description>
        <label>Assigned to</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Demos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Link the meeting to a case if the case was discussed in the meeting.</inlineHelpText>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Meetings</relationshipLabel>
        <relationshipName>Meetings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Demos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>now()</defaultValue>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Demo_outcome__c</fullName>
        <label>Meeting outcome</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Features__c</fullName>
        <label>Features</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Copado  Core</fullName>
                </value>
                <value>
                    <fullName>Data Deploy</fullName>
                </value>
                <value>
                    <fullName>CCD</fullName>
                </value>
                <value>
                    <fullName>CCH</fullName>
                </value>
                <value>
                    <fullName>DevOps Analytics</fullName>
                </value>
                <value>
                    <fullName>VSM</fullName>
                </value>
                <value>
                    <fullName>Copado DX</fullName>
                </value>
                <value>
                    <fullName>ALM</fullName>
                </value>
                <value>
                    <fullName>CLI</fullName>
                </value>
                <value>
                    <fullName>CST</fullName>
                </value>
                <value>
                    <fullName>Vlocity</fullName>
                </value>
                <value>
                    <fullName>Elements</fullName>
                </value>
                <value>
                    <fullName>OwnBackup</fullName>
                </value>
                <value>
                    <fullName>Misc</fullName>
                </value>
                <value>
                    <fullName>CRT</fullName>
                </value>
                <value>
                    <fullName>Heroku</fullName>
                </value>
                <value>
                    <fullName>Mulesoft</fullName>
                </value>
                <value>
                    <fullName>Functions</fullName>
                </value>
                <value>
                    <fullName>ADD</fullName>
                    <isActive>false</isActive>
                    <label>ADD</label>
                </value>
                <value>
                    <fullName>CAD</fullName>
                    <isActive>false</isActive>
                    <label>CAD</label>
                </value>
                <value>
                    <fullName>CBM</fullName>
                    <isActive>false</isActive>
                    <label>CBM</label>
                </value>
                <value>
                    <fullName>CCM</fullName>
                    <isActive>false</isActive>
                    <label>CCM</label>
                </value>
                <value>
                    <fullName>DO360</fullName>
                    <isActive>false</isActive>
                    <label>DO360</label>
                </value>
                <value>
                    <fullName>Selenium Testing</fullName>
                    <isActive>false</isActive>
                    <label>Selenium Testing</label>
                </value>
                <value>
                    <fullName>Services</fullName>
                    <isActive>false</isActive>
                    <label>Services</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Demos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mentor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Use this when you, as a mentor, sit in on a call to assess the SE running the call.</description>
        <label>Mentor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Mentor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Minutes__c</fullName>
        <inlineHelpText>Please provide the duration of this meeting (in minutes)</inlineHelpText>
        <label>Minutes</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Demos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PS_Consumed_Time__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Professional Services Consumed Time</description>
        <inlineHelpText>Professional Services Consumed Time In Hours</inlineHelpText>
        <label>PS Consumed Time</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Engineer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Engineer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.License_Info__c</field>
                <operation>equals</operation>
                <value>Salesforce</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Meetings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shadower__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Use this when you are going through training and shadowing a call for educational purposes.</description>
        <label>Shadower</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Shadower</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Waiting response</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Re-scheduled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <description>This is dependent upon the &quot;Type Field&quot;.</description>
        <label>Sub-Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Discovery Call</fullName>
                </value>
                <value>
                    <fullName>Next Steps Call</fullName>
                </value>
                <value>
                    <fullName>Licensing Discussion</fullName>
                </value>
                <value>
                    <fullName>ROI Discussion</fullName>
                </value>
                <value>
                    <fullName>ProServ Scoping</fullName>
                </value>
                <value>
                    <fullName>Procurement Call</fullName>
                </value>
                <value>
                    <fullName>Upsell Discovery</fullName>
                </value>
                <value>
                    <fullName>Sales Call Misc</fullName>
                </value>
                <value>
                    <fullName>First Demo</fullName>
                </value>
                <value>
                    <fullName>Second Demo</fullName>
                </value>
                <value>
                    <fullName>Third Demo</fullName>
                </value>
                <value>
                    <fullName>Fourth Demo</fullName>
                </value>
                <value>
                    <fullName>Misc Demo</fullName>
                </value>
                <value>
                    <fullName>Partner Demo</fullName>
                </value>
                <value>
                    <fullName>Trial Discussion</fullName>
                </value>
                <value>
                    <fullName>Trial Call 1</fullName>
                </value>
                <value>
                    <fullName>Trial Call 2</fullName>
                </value>
                <value>
                    <fullName>Trial Call 3</fullName>
                </value>
                <value>
                    <fullName>Trial Call 4</fullName>
                </value>
                <value>
                    <fullName>Trial Call 5</fullName>
                </value>
                <value>
                    <fullName>Trial Call 6</fullName>
                </value>
                <value>
                    <fullName>Trial Call Misc</fullName>
                </value>
                <value>
                    <fullName>Trial Debrief</fullName>
                </value>
                <value>
                    <fullName>Discovery &amp; Demo</fullName>
                </value>
                <value>
                    <fullName>Discovery</fullName>
                </value>
                <value>
                    <fullName>Demo</fullName>
                </value>
                <value>
                    <fullName>Workshop Planning Session</fullName>
                </value>
                <value>
                    <fullName>Workshop Reverse Demo</fullName>
                </value>
                <value>
                    <fullName>Workshop Playback</fullName>
                </value>
                <value>
                    <fullName>Implementation/ ProServ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Success_Engagement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the success engagement for the meeting</description>
        <label>Success Engagement</label>
        <referenceTo>Success_Engagement__c</referenceTo>
        <relationshipLabel>Meetings</relationshipLabel>
        <relationshipName>Meetings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Technical_Architect__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Technical Architect</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Technical_Architect</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Call</fullName>
                </value>
                <value>
                    <fullName>Technical Demo</fullName>
                </value>
                <value>
                    <fullName>Trial Meeting</fullName>
                </value>
                <value>
                    <fullName>InfoSec</fullName>
                </value>
                <value>
                    <fullName>Onboarding Call</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Professional Services</fullName>
                </value>
                <value>
                    <fullName>Check-in Call</fullName>
                </value>
                <value>
                    <fullName>Renewal Call</fullName>
                </value>
                <value>
                    <fullName>Business Review</fullName>
                </value>
                <value>
                    <fullName>Support Call</fullName>
                </value>
                <value>
                    <fullName>Partner Meeting</fullName>
                </value>
                <value>
                    <fullName>Time Logging</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Executive Sponsor</fullName>
                </value>
                <value>
                    <fullName>CRT</fullName>
                </value>
                <value>
                    <fullName>Essentials</fullName>
                </value>
                <value>
                    <fullName>PoC</fullName>
                    <isActive>false</isActive>
                    <label>PoC</label>
                </value>
                <value>
                    <fullName>Setup Call</fullName>
                    <isActive>false</isActive>
                    <label>Setup Call</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Video_URL__c</fullName>
        <label>Video URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>acv__c</fullName>
        <formula>Opportunity__r.Contract.ACV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>acv</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Meeting</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>Assigned_to__c</columns>
        <columns>Sales_Engineer__c</columns>
        <columns>Account__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Video_URL__c</columns>
        <columns>Minutes__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Assigned_to_me_Past</fullName>
        <booleanFilter>(1 OR 3) AND 2 AND (4 OR 5)</booleanFilter>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>Account__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Contact__c</columns>
        <columns>Date__c</columns>
        <columns>Description__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_to__c</field>
            <operation>contains</operation>
            <value>coppola</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Waiting response,Scheduled,Cancelled,Re-scheduled</value>
        </filters>
        <filters>
            <field>Sales_Engineer__c</field>
            <operation>contains</operation>
            <value>coppola</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
            <value>Juan Pablo</value>
        </filters>
        <filters>
            <field>Assigned_to__c</field>
            <operation>contains</operation>
            <value>Juan Pablo</value>
        </filters>
        <label>Ivan - Assigned to me - Past (spanish)</label>
        <sharedTo>
            <role>Sales_Engineer</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Meetings_list</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Status__c</columns>
        <columns>Assigned_to__c</columns>
        <columns>Account__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_to__c</field>
            <operation>contains</operation>
            <value>ojedo,estela,miguel,ferhat,pinett,gaviria,mert,roberto,konstantin,angel,luis,nahuel</value>
        </filters>
        <filters>
            <field>Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>Meetings list</label>
    </listViews>
    <listViews>
        <fullName>SE_Meetings_Forgot_Status_Completed</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Sales_Engineer__c</columns>
        <columns>Status__c</columns>
        <columns>Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Engineer__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>Date__c</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Date__c</field>
            <operation>greaterThan</operation>
            <value>1/1/2021 12:00 AM</value>
        </filters>
        <label>SE Meetings - Forgot Status Completed</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Se_Meetings_Forgot_Date</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Sales_Engineer__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Engineer__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Date__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>2/1/2021 12:00 AM</value>
        </filters>
        <label>SE Meetings - Forgot Date</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Meeting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Meetings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Date_Cannot_Be_Blank_For_SE_Meetings</fullName>
        <active>true</active>
        <description>If a meeting records has the Sales Engineer field filled in, we cannot let someone forget to fill in the Date field, so that we can know when this SE Meeting took place.</description>
        <errorConditionFormula>NOT(ISBLANK( Sales_Engineer__c )) &amp;&amp; ISBLANK(Date__c)</errorConditionFormula>
        <errorDisplayField>Date__c</errorDisplayField>
        <errorMessage>Please fill in the date field with the day and time that this meeting took place.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Features_Cannot_Be_Empty_For_A_Demo</fullName>
        <active>true</active>
        <description>If the meeting being logged is a Technical Demo, then the &quot;Features&quot; field cannot be left blank. We want a record of which features where presented to the customer in that demonstration.</description>
        <errorConditionFormula>AND(
     ISPICKVAL( Type__c , &quot;Technical Demo&quot; ),
     ISPICKVAL( Status__c , &quot;Completed&quot; ),
     ISBLANK(Features__c),
     $Profile.Name &lt;&gt; &quot;System Administrator&quot;,
     $Permission.Bypass_Features_Cannot_Be_Empty_For_A_Demo=FALSE
)</errorConditionFormula>
        <errorDisplayField>Features__c</errorDisplayField>
        <errorMessage>The &quot;Features&quot; field must be filled in for this technical demo.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Minutes_Cannot_Be_Blank_For_SE_Meetings</fullName>
        <active>true</active>
        <description>If a meeting records has the Sales Engineer field filled in, we cannot let someone forget to fill in the Minutes field, so that we can know how long the call was.</description>
        <errorConditionFormula>NOT(ISBLANK( Sales_Engineer__c )) &amp;&amp; ISBLANK(Minutes__c)</errorConditionFormula>
        <errorDisplayField>Minutes__c</errorDisplayField>
        <errorMessage>Please fill in how long of a call this was (i.e. 30, 60, 90 minutes).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SE_Cannot_Be_Blank_For_Trials_Or_Demos</fullName>
        <active>true</active>
        <description>If the &quot;Type&quot; of meeting is &quot;Technical Demo&quot; or &quot;Trial Meeting&quot;, then the &quot;Sales Engineer&quot; field MUST be filled in, as there was definitely an SE leading the call. This is to help increase the quality of reporting.</description>
        <errorConditionFormula>((ISPICKVAL( Type__c , &quot;Technical Demo&quot; ) &amp;&amp; NOT(ISBLANK(TEXT(Sub_Type__c)))) || 
(ISPICKVAL( Type__c , &quot;Trial Meeting&quot;) &amp;&amp; 
NOT(ISBLANK(TEXT(Sub_Type__c)))) || 
(ISPICKVAL( Sub_Type__c , &quot;Discovery Call&quot;))) &amp;&amp; 
ISBLANK( Sales_Engineer__c )</errorConditionFormula>
        <errorDisplayField>Sales_Engineer__c</errorDisplayField>
        <errorMessage>The &quot;Sales Engineer&quot; field must be filled in with the name of the SE that conducted this call.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sub_Type_Cannot_Be_Null</fullName>
        <active>true</active>
        <description>Cannot Be Null When The &quot;Type&quot; Field Is Either &quot;Sales Call&quot;, &quot;Technical Demonstration&quot;, or &quot;Trial Meeting&quot;</description>
        <errorConditionFormula>( ISPICKVAL( Type__c , &quot;Sales Call&quot;) || ISPICKVAL( Type__c , &quot;Technical Demo&quot;) || ISPICKVAL( Type__c , &quot;Essentials&quot;) || ISPICKVAL( Type__c , &quot;Trial Meeting&quot; )) &amp;&amp; ISPICKVAL(Sub_Type__c , &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Sub_Type__c</errorDisplayField>
        <errorMessage>You need to include a value for &quot;Sub-Type&quot; before you can save this record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Time_Logging_Minutes_Requirement</fullName>
        <active>true</active>
        <description>If Type = Time Logging, Minutes must be provided (not null)</description>
        <errorConditionFormula>AND(TEXT(Type__c) = &quot;Time Logging&quot;, ISNULL( Minutes__c ))</errorConditionFormula>
        <errorDisplayField>Minutes__c</errorDisplayField>
        <errorMessage>Please provide a number of &quot;Minutes&quot; if Time Logging is selected as the Type value.</errorMessage>
    </validationRules>
</CustomObject>